[package]
name = "emulator"
version = "0.1.0"
authors = ["Karol Trzcinski <k.trzcinski95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
engine = { path = "../engine" }
websocket = "0.24.0"
ndarray = "0.13"
ndarray-linalg = {version = "0.12.1", features = ["intel-mkl"] }
futures = { version = "0.1" }
tokio = { version = "0.1" }
toml = "0.5"
rand = "*"
rand_core = "*"
rand_xorshift = "*"
serde = {version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
